# contract_rag_assistant

./: .gitignore  README.md  app.py  pyproject.toml
config/: settings.py
core/: chunking.py  embeddings.py  feedback.py  ingest.py  ner.py  prompts.py  qa.py  vectorstore.py
services/: pdf_service.py  qa_service.py
tests/: conftest.py  test_chunking.py  test_embeddings.py  test_feedback.py  test_ingest.py  test_ner.py  test_prompts.py  test_qa.py  test_services.py  test_vectorstore.py
ui/: components.py  feedback.py  session_state.py
